--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   "MainTextButton": "Install now",
   "Cancelable": "false",
   "CancelButtonText": "Cancel",
-  "DownloadLink": "https://play.google.com/store/apps/details?id=lite.danjariapps.hausanovels",
+  "DownloadLink": "https://play.google.com/store/apps/details?id=mynovels.com.ng.gidanuncle",
   "Version": "1.3"
 }
