--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Latest version of My Novels Lite",
-  "Description": "Latest Version of My novels lite has been released Download and Install",
+  "Title": "Latest version of Abokin Hira",
+  "Description": "Latest Version of abokin hira has been released Download and Install",
   "MainTextButton": "Install now",
   "Cancelable": "false",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://play.google.com/store/apps/details?id=mynovels.com.ng.gidanuncle",
-  "Version": "1.4"
+  "Version": "1.5"
 }
