--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   "Visibility": "VISIBLE",
   "Title": "Latest version of Abokin Hira",
   "Description": "Latest Version of abokin hira has been released Download and Install",
-  "MainTextButton": "Install now",
+  "MainTextButton": "Download and install",
   "Cancelable": "false",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://play.google.com/store/apps/details?id=mynovels.com.ng.gidanuncle",
-  "Version": "1.5"
+  "Version": "1.6"
 }
