--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   "Title": "Latest version of Abokin Hira",
   "Description": "Latest Version of abokin hira has been released Download and Install",
   "MainTextButton": "Download and install",
-  "Cancelable": "false",
+  "Cancelable": "true",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://play.google.com/store/apps/details?id=mynovels.com.ng.gidanuncle",
   "Version": "1.8"
